[gd_scene load_steps=3 format=3 uid="uid://c3cl77r65dexu"]

[ext_resource type="Script" path="res://addons/cyclops_level_builder/menu/editor_toolbar.gd" id="1_o71fd"]

[sub_resource type="ButtonGroup" id="ButtonGroup_i8xwa"]

[node name="PanelContainer" type="PanelContainer"]
offset_right = 42.0
offset_bottom = 31.0
script = ExtResource("1_o71fd")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="bn_block" type="Button" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Move"
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_i8xwa")
text = "Block"

[node name="bn_prism" type="Button" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Draw"
toggle_mode = true
button_group = SubResource("ButtonGroup_i8xwa")
text = "Prism"

[node name="check_lock_uvs" type="CheckBox" parent="HBoxContainer"]
layout_mode = 2
text = "Lock UVs"

[node name="bn_clip" type="Button" parent="HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_i8xwa")
text = "Clip"

[node name="bn_vertex" type="Button" parent="HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_i8xwa")
text = "Vertex"

[node name="bn_edge" type="Button" parent="HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_i8xwa")
text = "Edge"

[node name="bn_face" type="Button" parent="HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_i8xwa")
text = "Face"

[node name="bn_flipX" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Flip X"

[node name="bn_flipY" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Flip Y"

[node name="bn_flipZ" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Flip Z"

[node name="bn_duplicate" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Duplicate"

[node name="bn_textureLock" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "B"

[node name="bn_uvLock" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "B"

[node name="grid_size" type="OptionButton" parent="HBoxContainer"]
layout_mode = 2
item_count = 9
selected = 0
popup/item_0/text = "1/16"
popup/item_0/id = 0
popup/item_1/text = "1/8"
popup/item_1/id = 1
popup/item_2/text = "1/4"
popup/item_2/id = 2
popup/item_3/text = "1/2"
popup/item_3/id = 3
popup/item_4/text = "1"
popup/item_4/id = 4
popup/item_5/text = "2"
popup/item_5/id = 5
popup/item_6/text = "4"
popup/item_6/id = 6
popup/item_7/text = "8"
popup/item_7/id = 7
popup/item_8/text = "16"
popup/item_8/id = 8

[node name="MenuButton" type="MenuButton" parent="HBoxContainer"]
layout_mode = 2
text = "Edit"
item_count = 1
popup/item_0/text = "Item"
popup/item_0/id = 0

[connection signal="pressed" from="HBoxContainer/bn_block" to="." method="_on_bn_move_pressed"]
[connection signal="pressed" from="HBoxContainer/bn_prism" to="." method="_on_bn_draw_pressed"]
[connection signal="toggled" from="HBoxContainer/check_lock_uvs" to="." method="_on_check_lock_uvs_toggled"]
[connection signal="pressed" from="HBoxContainer/bn_clip" to="." method="_on_bn_clip_pressed"]
[connection signal="pressed" from="HBoxContainer/bn_vertex" to="." method="_on_bn_vertex_pressed"]
[connection signal="pressed" from="HBoxContainer/bn_edge" to="." method="_on_bn_edge_pressed"]
[connection signal="pressed" from="HBoxContainer/bn_face" to="." method="_on_bn_face_pressed"]
[connection signal="item_selected" from="HBoxContainer/grid_size" to="." method="_on_grid_size_item_selected"]
